[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dji_dsp_tools"
authors = [
    {name = "cranyozen", email = "cranyozen@foxmail.com"}
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)"
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/"
