[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dspy_tool"
authors = [
    {name = "cranyozen", email = "cranyozen@foxmail.com"}
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "pycryptodome >= 3.19",
    "pyyaml >= 6.0.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)"
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/"

[project.scripts]
dsp-codec = "dspy_tool.cli.dsp_codec:main"
